--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 appdirs==1.4.3
+certifi==2017.4.17
+chardet==3.0.3
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.1
 django-toolbelt==0.0.1
 gunicorn==19.7.1
+idna==2.5
 packaging==16.8
 psycopg2==2.6.2
 pyparsing==2.2.0
 python-decouple==3.0
 pytz==2017.2
+requests==2.17.3
 six==1.10.0
 static3==0.7.0
+stripe==1.58.0
+urllib3==1.21.1
 whitenoise==3.3.0
