--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,25 @@ certifi==2017.4.17
 chardet==3.0.3
 dj-database-url==0.4.2
 dj-static==0.0.6
+dj-stripe==0.8.0
 Django==1.11.1
+django-braces==1.11.0
+django-forms-bootstrap==3.1.0
+django-jsonfield==1.0.1
+django-model-utils==3.0.0
+django-shortuuidfield==0.1.3
+django-stripe-payments==2.0.0
 django-toolbelt==0.0.1
 gunicorn==19.7.1
 idna==2.5
+jsonfield==2.0.1
 packaging==16.8
 psycopg2==2.6.2
 pyparsing==2.2.0
 python-decouple==3.0
 pytz==2017.2
 requests==2.17.3
+shortuuid==0.5.0
 six==1.10.0
 static3==0.7.0
 stripe==1.58.0
