--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 certifi==2017.4.17
 chardet==3.0.3
+csscompressor==0.9.4
 dj-database-url==0.4.2
 dj-static==0.0.6
 dj-stripe==0.8.0
@@ -9,11 +10,14 @@ django-braces==1.11.0
 django-forms-bootstrap==3.1.0
 django-jsonfield==1.0.1
 django-model-utils==3.0.0
+django-pipeline==1.6.13
 django-shortuuidfield==0.1.3
 django-stripe-payments==2.0.0
 django-toolbelt==0.0.1
+futures==3.1.1
 gunicorn==19.7.1
 idna==2.5
+jsmin==2.2.2
 jsonfield==2.0.1
 packaging==16.8
 psycopg2==2.6.2
